# consciousness-flux-model

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_MANIFEST.json  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
data/: ccsr_parameters_template.csv  synthetic_ccsr_timeseries.csv
docs/: HANDOFF.md  index.md
outputs/archives/2025-09-13_002446/: analyze_csr.py  ccsr_notebook.py  run_ccsr_model.py
outputs/notebooks/: ccsr_minimal.ipynb
outputs/results/: model_results_v1.0.0_20250913_003004.json  model_results_v1.0.1_20250913_003251.json  model_results_v1.0.2_20250913_004034.json  model_results_v1.0.3_20250913_005340.json  model_results_v1.0.3_20250913_005350.json  model_results_v1.0.3_20250913_010646.json  model_results_v1.0.3_20250913_013229.json  regional_panel.csv
src/: compare_priors.py  consciousness_flux_model_v1.py  consciousness_flux_visualization.py
src/rich/: changepoint.py  hierarchy.py  quality.py  synthetic_rich_data.py  visualize_multi.py
tests/: test_invariants.py
