[project]
name = "consciousness-flux-model"
version = "1.0.3"
requires-python = ">=3.10"
dependencies = ["numpy", "pandas", "matplotlib", "pytest"]
description = "Mathematical framework modeling consciousness as energy flowing through cosmic, terrestrial, and emergent sources"
authors = [
    {name = "Yousef Awlaki", email = "yoawlaki@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["consciousness", "mathematical-modeling", "philosophy", "AI", "emergent-behavior"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.scripts]
ccsr = "src.consciousness_flux_model_v1:main"
ccsr-compare = "src.compare_priors:run"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
